[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openaigym-ann-py"
version = "0.1.0"
description = ""
authors = ["icarus64 <ellishogan95@gmail.com>"]
readme = "README.md"
packages = [
	{include = "classes"},
]

[tool.poetry.dependencies]
python = "^3.11.0"
abc-ann-py = { path = "../abstract-base-classes"}
