[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "open_ai_gym"
version = "0.1.0"
description = ""
authors = ["icarus64 <ellishogan95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.0"
abstract_base_classes = { path = "../abstract-base-classes"}
