[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "open_ai_gym"
version = "0.1.0"
description = ""
authors = ["icarus64 <ellishogan95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
abstract_base_classes = {path = "../abstract-base-classes"}
python = "3.11"
tensorflow = "^2.6.0"
numpy = "^1.26.3"
gymnasium = {version = "^0.29.1", extras = ["box2d", "atari", "mujoco"]}